# march-madness-predictor

./: .gitignore  Cargo.toml  NCAA Mens March Madness Historical Results.csv  README.md  march_madness_historical_data.csv
docs/: SCRATCH_GENETIC.md
genetic/: Cargo.toml
genetic/src/: genetic.rs  lib.rs  network.rs
mmp/: Cargo.toml
mmp/src/: main.rs
src/: args.rs  data.rs  genetic.rs  main.rs  network.rs  neuron.rs
